--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-repo",
+  "name": "js-form-validation",
   "version": "1.0.0",
-  "description": "Basic template repo",
+  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
